# nerve

./: .dockerignore  .editorconfig  .gitignore  CNAME  CODEOWNERS  LICENSE  docker-compose.yml
.github/workflows/: ci.yml  cloud-e2e-matrix.yml  cloud-e2e-smoke.yml  docker-publish.yml  e2e-smoke.yml  pages.yml  security.yml
cmd/nerve-control-plane/: main.go
cmd/nerve-reconcile/: main.go
dashboard/: .env.local.example
dashboard/src/: middleware.ts
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/components/: brand-logo.tsx  sidebar.tsx  user-menu.tsx
dashboard/src/lib/: bff-auth.ts  nerve-api.ts  profile.ts
dashboard/src/types/: supabase.ts
dashboard/supabase/migrations/: 20250210_create_profiles.sql
deploy/cloud/: Dockerfile.control-plane  docker-compose.cloud.yml  env.example  fly.control-plane.toml  fly.runtime.toml
docs/: ARCHITECTURE.md  CLOUD_QUICKSTART.md  CLOUD_SECURITY.md  MCP_TRANSPORT.md  NeuralMail_PRD.md  PRICING_AND_ENTITLEMENTS.md  QUICKSTART.md  Repo_Layout.md  SECURITY.md  STALWART_SETUP.md  TAXONOMY_AND_SCHEMAS.md
sdk/python/: pyproject.toml
sdk/python/nerve_email/: __init__.py  admin.py  client.py  exceptions.py  tools.py  types.py
sdk/python/nerve_email.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdk/python/tests/: conftest.py  test_admin.py  test_client.py  test_contract.py  test_tools.py
site/: index.html  main.js  styles.css
site/assets/fonts/: README.md
thoughts/shared/implementations/: 2026-02-09-private-cloud-subscription-control-plane-validation.md
(+30 files in other folders)
