[project]
name = "nerve-email"
version = "0.1.0"
description = "Python SDK for Nerve MCP email server -- framework-agnostic"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "integration: tests that require a live Nerve server",
]
